# deepsegment

./: .gitignore  pyproject.toml
configs/: test_config.yaml
src/deepsegment/: cli.py  run_training.py
src/deepsegment/modules/: get_data.py  reorder_files.py  training_helper.py  training_module.py
tests/: test_dataset.py  test_reorder_files.py
